--- a/index.html
+++ b/index.html
@@ -86,14 +86,10 @@
             <div class="row">
               <div class="col-lg-7 my-2">
                 <div class="forecast">
-                  <div
-                    class="forecast-head d-flex align-content-center justify-content-between"
-                    id="today"
-                  ></div>
-                  <div
-                    class="forecast-body d-flex flex-column"
-                    id="currentWeather"
-                  ></div>
+                  <div class="forecast-head d-flex align-content-center justify-content-between" id="today"></div>
+                  <div class="forecast-body d-flex flex-column" id="currentWeather">
+
+                  </div>
                 </div>
               </div>
               <div class="col-lg-5  my-2 ">
@@ -161,3 +157,4 @@
     <script src="JS/main.js"></script>
   </body>
 </html>
+
