--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
               <a class="nav-link" aria-current="page" href="#">Photos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/"
+              <a class="nav-link active" aria-current="page" href="index.html"
                 >Contact</a
               >
             </li>
