--- a/index.html
+++ b/index.html
@@ -108,6 +108,14 @@
               </div>
               <div class="col-lg-5 my-2">
                 <table class="table text-center">
+                  <thead>
+                    <tr>
+                      <td>Day</td>
+                      <td>Condition</td>
+                      <td>Min</td>
+                      <td>Max</td>
+                    </tr>
+                  </thead>
                   <tbody id="tableData"></tbody>
                 </table>
               </div>
@@ -154,10 +162,7 @@
               </div>
             </div>
           </div>
-          <p>
-            Copyright 2014 Company name. Designed by Themezy. All rights
-            reserved
-          </p>
+          <p>Copyright 2024. Designed by Morsy. All rights reserved</p>
         </div>
       </section>
     </main>
