--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
               <a class="nav-link" aria-current="page" href="#">Photos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a class="nav-link active" aria-current="page" href="#"
                 >Contact</a
               >
             </li>
@@ -72,7 +72,7 @@
       <section id="previous-page" class="py-2">
         <div class="container">
           <div class="previous">
-            <a href="/">Home</a>
+            <a href="index.html">Home</a>
             <i class="fa-solid fa-arrow-right"></i>
             <span>Contact</span>
           </div>
