--- a/contact.html
+++ b/contact.html
@@ -130,37 +130,44 @@
               <div class="title">
                 <h2 class="text-white">Contact Us</h2>
                 <p class="text-white lead">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Commodi consectetur inventore ducimus, facilis, numquam id
-                  soluta omnis eius recusandae nesciunt vero repellat harum cum.
-                  Nisi facilis odit hic, ipsum sed!
+                  Thank you for reaching out to Weather App. We welcome your
+                  feedback and inquiries. Our team is here to assist you with
+                  any questions, troubleshooting, or suggestions you may have.
+                  Contact us through the form below, and we'll ensure a prompt
+                  response. Your input is crucial in enhancing our app and
+                  delivering accurate weather information. We appreciate your
+                  trust.
                 </p>
               </div>
               <div class="input-group d-flex flex-column">
                 <div class="row m-0">
-                    <div class="col-md-6">
-                        <input type="text" placeholder="Your name...">
-                    </div>
-                    <div class="col-md-6">
-                        <input type="email" placeholder="E-mail address...">
-                    </div>
-                </div>
-                <div class="row m-0 ">
-                    <div class="col-md-6">
-                        <input type="text" placeholder="Company name...">
-                    </div>
-                    <div class="col-md-6">
-                        <input type="text" placeholder="Website...">
-                    </div>
+                  <div class="col-md-6">
+                    <input type="text" placeholder="Your name..." />
+                  </div>
+                  <div class="col-md-6">
+                    <input type="email" placeholder="E-mail address..." />
+                  </div>
                 </div>
                 <div class="row m-0">
-                    <div class="col-md-12">
-                        <textarea placeholder="Message..." cols="30" rows="5"></textarea>
-                    </div>
+                  <div class="col-md-6">
+                    <input type="text" placeholder="Company name..." />
+                  </div>
+                  <div class="col-md-6">
+                    <input type="text" placeholder="Website..." />
+                  </div>
                 </div>
-                <div class="submit ">
-                <button id="sendBtn" class="mb-3">Submit</button>
-            </div>
+                <div class="row m-0">
+                  <div class="col-md-12">
+                    <textarea
+                      placeholder="Message..."
+                      cols="30"
+                      rows="5"
+                    ></textarea>
+                  </div>
+                </div>
+                <div class="submit">
+                  <button id="sendBtn" class="mb-3">Submit</button>
+                </div>
               </div>
             </div>
           </div>
@@ -205,10 +212,7 @@
               </div>
             </div>
           </div>
-          <p>
-            Copyright 2014 Company name. Designed by Themezy. All rights
-            reserved
-          </p>
+          <p>Copyright 2024. Designed by Morsy. All rights reserved</p>
         </div>
       </section>
     </main>
