--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="loading">
       <span class="loader"></span>
     </div>
-    <nav class="navbar navbar-expand-lg main-nav navbar-dark">
+    <nav class="navbar navbar-expand-lg main-nav navbar-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">
           <img
@@ -78,8 +78,8 @@
         </div>
       </div>
     </nav>
-    <main>
-      <section id="search" class="py-3">
+    <main class="mt-5">
+      <section id="search" class="py-4">
         <div class="container">
           <div class="search position-relative">
             <input
@@ -99,12 +99,12 @@
                 <div class="forecast">
                   <div
                     class="forecast-head d-flex align-content-center justify-content-between"
-                    id="today"
-                  ></div>
+                    id="today">
+                  </div>
                   <div
                     class="forecast-body d-flex flex-column"
-                    id="currentWeather"
-                  ></div>
+                    id="currentWeather">
+                  </div>
                 </div>
               </div>
               <div class="col-lg-5 my-2">
@@ -131,8 +131,7 @@
               <div class="group position-relative">
                 <input
                   type="text"
-                  placeholder="Enter your e-mail to subscribe...."
-                />
+                  placeholder="Enter your e-mail to subscribe...."/>
                 <button id="subscribe">Subscribe</button>
               </div>
             </div>
