--- a/contact.html
+++ b/contact.html
@@ -212,7 +212,7 @@
               </div>
             </div>
           </div>
-          <p>Copyright 2024. Designed by Morsy. All rights reserved</p>
+          <p>Copyright 2024. Designed by Ahmed Morsy. All rights reserved</p>
         </div>
       </section>
     </main>
