--- a/index.html
+++ b/index.html
@@ -110,10 +110,7 @@
               <div class="col-md-4">
                 <!-- Tomorrow -->
                 <div class="forecast-next mb-3">
-                  <div
-                    class="forecast-head d-flex align-content-center justify-content-between"
-                    id="tomorrow"
-                  ></div>
+                  <div class="forecast-head text-center" id="tomorrow"></div>
                   <div
                     class="forecast-body d-flex flex-column"
                     id="tomorrowWeather"
@@ -124,7 +121,7 @@
                 <!-- The day after -->
                 <div class="forcast_day_after mb-3">
                   <div
-                    class="d-flex align-content-center justify-content-between forecast-head"
+                    class="text-center forecast-head"
                     id="the_day_after"
                   ></div>
                   <div
@@ -137,9 +134,7 @@
           </div>
         </div>
       </section>
-      <section id="map">
-      
-      </section>
+      <section id="map"></section>
       <section id="footer">
         <div class="container">
           <div class="row">
